--- a/kube-resource/pod-config-map.yaml
+++ b/kube-resource/pod-config-map.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod 
 metadata:
-  name: hello-pod 
+  name: config-pod 
   # namespace: roboshop
 spec:
   containers:
@@ -20,4 +20,3 @@ spec:
         configMapKeyRef:
           name: devops-config # where to take 
           key: learner  # what is the key 
-          
