--- a/kube-resource/pod-config-map.yaml
+++ b/kube-resource/pod-config-map.yaml
@@ -20,3 +20,18 @@ spec:
         configMapKeyRef:
           name: devops-config # where to take 
           key: learner  # what is the key 
+---
+apiVersion: v1
+kind: Pod 
+metadata:
+  name: config-pod-1
+  # namespace: roboshop
+spec:
+  containers:
+  - name: hello-pod
+    image: nginx
+    ports: 
+    - containerPort: 80
+    envFrom:
+      configMapKeyRef:
+        name: devops-config
