--- a/kube-resource/pod-secret.yaml
+++ b/kube-resource/pod-secret.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod 
 metadata:
-  name: config-pod-1
+  name: secret-pod
   # namespace: roboshop
 spec:
   containers:
-  - name: hello-pod
+  - name: Secret
     image: nginx
     ports: 
     - containerPort: 80
