--- a/kube-resource/pod-secret.yaml
+++ b/kube-resource/pod-secret.yaml
@@ -5,7 +5,7 @@ metadata:
   # namespace: roboshop
 spec:
   containers:
-  - name: Secret-pod
+  - name: secret-pod
     image: nginx
     ports: 
     - containerPort: 80
