--- a/services/01-cluster-ip.yaml
+++ b/services/01-cluster-ip.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx-pod
   labels:  # using labeles here 
     app: nginx
-    demo: Service  
+    demo: service  
   # namespace: roboshop
 spec:
   containers:
@@ -16,11 +16,11 @@ spec:
 apiVersion: v1
 kind: Service 
 metadata: 
-  name: nginx-Service
+  name: nginx-service
 spec:
   selector: # this is used to attach the service to pod by using the labels we gave sam elabel as above the servie will attach to above pods 
     app: nginx
-    demo: Service
+    demo: service
   ports:
     - protocol: TCP
       port: 80 #service port 
